--- a/style.css
+++ b/style.css
@@ -1,1 +1,35 @@
+ body{
+    font-family: 'Baloo Chettan 2', cursive;
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+ }
+ h1{
+     font-size: 50px;
+ }
+ .orange-color{
+     color: orange;
+ }
+ section{
+    display: flex;
  
+ }
+ .half-width{
+     width: 50%;
+     padding-left: 10px;
+ }
+ .half-width img{
+     width: 80%;
+ }
+ .button1{
+     background-image: linear-gradient(salmon, tomato);
+     text-decoration: none;
+     padding: 10px 40px;
+     border-radius: 5px;
+     color: white;
+     font-weight: 700;
+ }
+.top-banar{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+  
+}
